# mvts_transformer

./: .gitignore  pyproject.toml  run_tr_25.sh  run_tr_250.sh  run_tr_250_Adam.sh  run_tr_250_Adam00001.sh  run_tr_250_WAdamNoScheduler_lre4.sh  run_tr_250_WAdam_MAE_lre4.sh  run_tr_250_WAdam_MAE_lre5.sh  run_tr_250_WAdam_MSE_lre3.sh  run_tr_250_WAdam_MSE_lre4.sh  run_tr_250_WAdam_MSE_lre4_noFFTconcat.sh  run_tr_250_WAdam_MSE_lre5.sh  run_train_Adam.sh  run_train_RAdam.sh  run_train_RAdam_lr00001.sh
src/: main.py  optimizers.py  options.py  read_res.py  running.py
src/datasets/: check_data.py  data.py  dataset.py  prep_data_map_pkg.py  prep_data_ucsf.py
src/models/: loss.py  ts_transformer.py
